--- a/Billed-app-FR-Front-main/index.html
+++ b/Billed-app-FR-Front-main/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="src/css/datepicker.css">
 
     <title>Billed</title>
+    <link rel="icon" type="favicon" href="./favicon.jpg">
   </head>
   <style>
     body {
